[gd_scene load_steps=2 format=3 uid="uid://bliehthhy04qt"]

[ext_resource type="Script" path="res://Scripts/slot.gd" id="1_8kfom"]

[node name="ColorRect" type="ColorRect"]
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
script = ExtResource("1_8kfom")

[node name="slotModulate" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(1, 1, 1, 0)

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
